show carousel on mobile device; fixes #280.

--- a/client/app/less/bcdevx/bcdevx-app.less
+++ b/client/app/less/bcdevx/bcdevx-app.less
@@ -639,28 +639,6 @@ See the License for the specific language governing permissions and limitations 
   }
 }
 
-#home-page.container-fluid {
-  .row.no-pad > [class*='col-'] {
-    padding-right: 0;
-    padding-left: 0;
-  }
-}
-
-#home-page-carousel {
-
-  .item img {
-    margin: auto;
-  }
-  .carousel-caption {
-    h1, p {
-      color: white !important;
-      font-size: 4em;
-      padding-bottom: 12%;
-      text-shadow: 1px 2px black;
-    }
-  }
-}
-
 .devx-label {
   margin: 0 3px 3px 0;
   display: inline-block;
@@ -722,98 +700,6 @@ See the License for the specific language governing permissions and limitations 
   }
 }
 
-#home-page {
-  height: 100%;
-  #mobile-header {
-    &:extend(.devx-header all);
-    background-image: url('/img/header7.jpg');
-    padding: 10%;
-    h2 {
-      &:extend(.text-center);
-      font-size: 1.25em;
-      text-shadow: 1px 2px black;
-    }
-  }
-  #hook {
-    @media (max-width: @screen-xs-min) {
-      .lead {
-        font-size: 1em;
-      }
-    }
-  }
-
-  #persona-selector {
-    .jumbotron {
-      background-color: white;
-      padding: 2%;
-    }
-    .persona-buttons {
-      margin-bottom: 5%;
-    }
-    .persona-button {
-      &:extend(.btn);
-      &:extend(.btn-lg);
-      &:extend(.btn-primary);
-      //todo make this responsive
-      width: 200px;
-      margin-bottom: 5% !important;
-    }
-  }
-
-  .value-prop-section {
-    .value-prop-section-caption {
-      &:extend(.text-center);
-      text-shadow: 1px 2px black;
-      .goto-top {
-        margin-top: -6%;
-        opacity: .5;
-        vertical-align: top;
-        color: black;
-        &:hover {
-          opacity: .8;
-        }
-      }
-    }
-    .value-prop-set {
-      .value-prop-card {
-        min-height: 25%;
-        margin: 12%;
-      }
-      .value-prop-cta {
-        margin-left: 10%;
-        margin-right: 10%;
-        margin-top: 20%;
-        margin-bottom: 25%;
-      }
-    }
-  }
-  #developers-value-props {
-    .value-prop-section-caption {
-      &:extend(.devx-developer-header all);
-    }
-  }
-
-  #entrepreneurs-value-props {
-    .value-prop-section-caption {
-      &:extend(.devx-entrepreneur-header all);
-    }
-  }
-
-  #public-sector-value-props {
-    .value-prop-section-caption {
-      &:extend(.devx-partner-header all);
-    }
-  }
-
-  #experiment-banner {
-    .cta-button {
-      margin-left: 20%;
-      margin-right: 20%;
-    }
-  }
-
-
-}
 
 
 
